[package]
name = "tomboy-toml-dom"
version = "0.1.11"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
For those who are struggling with Rust's cool syntax, our goal is to provide a TOML parser that's as easy as pointing to a menu and eating fast food.  
"""
readme = "README.md"
repository = "https://github.com/muzudho/tomboy-toml-dom"
license = "MIT"
keywords = ["toml"]
categories = ["parser-implementations"]
exclude = ["doc/*", "resource/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# lazy_static = "1.4.0"
regex = "1"
casual_logger = "0.6.5"
chrono = "0.4.19"
